# cryptsetup

./: .codeql-config.yml  .gitignore  .gitlab-ci.yml  .lgtm.yml  .travis-functions.sh  .travis.yml  0002-Add-options-for-LUKS2-header-size-settings.patch  AUTHORS  CONTRIBUTING.md  COPYING  ChangeLog  FAQ  FAQ.md  INSTALL  Makefile.am  NEWS  README  README.licensing  README.md  SECURITY.md  TODO  autogen.sh  config.h.in  configure.ac  configure.in  cryptsetup-smartcard  doxyfile  meson.build  meson_options.txt  setup-gettext
lib/: Makefile.am  Makemodule.am  backends.c  base64.c  base64.h  bitops.h  crypt_plain.c  errno_compat.h  gcrypt.c  internal.h  keyslot_context.c  keyslot_context.h  libcryptsetup.h  libcryptsetup.pc.in  libcryptsetup.sym  libcryptsetup_macros.h  libcryptsetup_symver.h  libdevmapper.c  meson.build  nls.h  random.c  setup.c  utils.c  utils_benchmark.c  utils_blkid.c  utils_blkid.h  utils_crypt.c  utils_crypt.h  utils_debug.c  utils_device.c  utils_device_locking.c  utils_device_locking.h  utils_devpath.c  utils_dm.h  utils_fips.c  utils_fips.h  utils_io.c  utils_io.h  utils_keyring.c  utils_keyring.h  (+9 more)
lib/bitlk/: bitlk.c  bitlk.h
lib/cli/: Makemodule.am  cli.c  cli_internal.h  libcryptsetup_cli.h  libcryptsetup_cli.pc.in  libcryptsetup_cli.sym
lib/crypto_backend/: Makefile.am  Makemodule.am  argon2_generic.c  base64.c  cipher_check.c  cipher_generic.c  crc32.c  crypto_backend.h  crypto_backend_internal.h  crypto_cipher_kernel.c  crypto_gcrypt.c  crypto_kernel.c  crypto_mbedtls.c  crypto_nettle.c  crypto_nss.c  crypto_openssl.c  crypto_storage.c  memutils.c  meson.build  pbkdf2_generic.c  pbkdf_check.c  utf8.c
lib/fvault2/: fvault2.c  fvault2.h
lib/integrity/: Makefile.am  integrity.c  integrity.h
lib/loopaes/: Makefile.am  loopaes.c  loopaes.h
lib/luks1/: Makefile.am  af.c  af.h  keyencryption.c  keymanage.c  luks.h  pbkdf.c  pbkdf.h
lib/luks2/: Makefile.am  base64.c  base64.h  luks2.h  luks2_digest.c  luks2_digest_pbkdf2.c  luks2_disk_metadata.c  luks2_internal.h  luks2_json_format.c  luks2_json_metadata.c  luks2_keyslot.c  luks2_keyslot_luks2.c  luks2_keyslot_reenc.c  luks2_luks1_convert.c  luks2_reencrypt.c  luks2_reencrypt_digest.c  luks2_segment.c  luks2_token.c  luks2_token_keyring.c
lib/tcrypt/: Makefile.am  tcrypt.c  tcrypt.h
lib/verity/: Makefile.am  fec.c  fec.h  rs.h  rs_decode_char.c  rs_encode_char.c  verity.c  verity.h  verity_fec.c  verity_hash.c
luks/: Makefile.am  XORblock.h  af.c  af.h  keyencryption.c  keymanage.c  luks.h  pbkdf.c  pbkdf.h  random.c
luks/sha/: hmac.c  hmac.c.orig  hmac.h  hmac_sha1.c  hmac_sha1.h  sha1.c  sha1.c.orig  sha1.h
man/: Makefile.am  Makemodule.am  common_footer.adoc  common_options.adoc  cryptsetup-benchmark.8.adoc  cryptsetup-bitlkDump.8.adoc  cryptsetup-close.8.adoc  cryptsetup-config.8.adoc  cryptsetup-convert.8.adoc  cryptsetup-erase.8.adoc  cryptsetup-fvault2Dump.8.adoc  cryptsetup-isLuks.8.adoc  cryptsetup-luksAddKey.8.adoc  cryptsetup-luksChangeKey.8.adoc  cryptsetup-luksConvertKey.8.adoc  cryptsetup-luksDump.8.adoc  cryptsetup-luksFormat.8.adoc  cryptsetup-luksHeaderBackup.8.adoc  cryptsetup-luksHeaderRestore.8.adoc  cryptsetup-luksKillSlot.8.adoc  cryptsetup-luksRemoveKey.8.adoc  cryptsetup-luksResume.8.adoc  cryptsetup-luksSuspend.8.adoc  cryptsetup-luksUUID.8.adoc  cryptsetup-open.8.adoc  cryptsetup-reencrypt.8  cryptsetup-reencrypt.8.adoc  cryptsetup-refresh.8.adoc  cryptsetup-repair.8.adoc  cryptsetup-resize.8.adoc  cryptsetup-ssh.8  cryptsetup-ssh.8.adoc  cryptsetup-status.8.adoc  cryptsetup-tcryptDump.8.adoc  cryptsetup-token.8.adoc  cryptsetup-tpm2.8  cryptsetup.8  cryptsetup.8.adoc  integritysetup.8  integritysetup.8.adoc  (+4 more)
man/common/: cryptsetup_options.adoc  footer.adoc
python/: Makefile.am  Makemodule.am  pycryptsetup-test.py  pycryptsetup.c
src/: Makefile.am  Makemodule.am  crypt_reencrypt.c  cryptsetup.c  cryptsetup.h  cryptsetup_arg_list.h  cryptsetup_args.h  cryptsetup_reencrypt.c  cryptsetup_reencrypt_arg_list.h  cryptsetup_reencrypt_args.h  integritysetup.c  integritysetup_arg_list.h  integritysetup_args.h  meson.build  plugin.h  utils_arg_macros.h  utils_arg_names.h  utils_args.c  utils_blockdev.c  utils_key_description.c  utils_keyslot_check.c  utils_luks.c  utils_luks.h  utils_luks2.c  utils_password.c  utils_progress.c  utils_reencrypt.c  utils_reencrypt_luks1.c  utils_tools.c  veritysetup.c  veritysetup_arg_list.h  veritysetup_args.h
tests/: 00modules-test  LUKS-d238e48a-0ed3-4169-b841-f26b44693134.tar.xz  Makefile.am  Makefile.localtest  align-test  align-test2  align_test  all-symbols-test.c  api-test-2.c  api-test.c  api_test.h  apitest.c  bitlk-compat-test  bitlk-images.tar.xz  blkid-luks2-pv.img.xz  blockwise-compat  blockwise-compat-test  compat-args-test  compat-test  compat-test-args  compat-test-opal  compat-test2  compatimage.img.xz  compatimage2.img.xz  compatv10image.img.bz2  compatv10image.img.xz  crypto-check.c  crypto-vectors.c  cryptsetup-compat-test-portable  cryptsetup-valg-supps  device-test  differ.c  discards-test  dummy.c  evil_hdr-keyslot_overlap.bz2  evil_hdr-keyslot_overlap.xz  evil_hdr-luks_hdr_damage.bz2  evil_hdr-luks_hdr_damage.xz  evil_hdr-payload_overwrite.bz2  evil_hdr-payload_overwrite.xz  (+64 more)
tests/fuzz/: FuzzerInterface.h  LUKS2.proto  LUKS2_plain_JSON.proto  Makefile.am  README.md  common.c  common.h  crypt2_load_fuzz.cc  crypt2_load_fuzz.dict  crypt2_load_fuzz_LUKS1.cc  crypt2_load_ondisk_fuzz.cc  crypt2_load_ondisk_fuzz.dict  crypt2_load_proto_fuzz.cc  crypt2_load_proto_plain_json_fuzz.cc  crypt2_load_proto_plain_json_fuzz.dict  crypt_load_misc_fuzz.cc  json_proto_converter.cc  json_proto_converter.h  meson.build  oss-fuzz-build.sh  plain_json_proto_to_luks2.cc  plain_json_proto_to_luks2_converter.cc  plain_json_proto_to_luks2_converter.h  proto_to_luks2.cc  proto_to_luks2_converter.cc  proto_to_luks2_converter.h  unpoison-mutated-buffers-from-libfuzzer.patch
tests/generators/: generate-luks2-area-in-json-hdr-space-json0.img.sh  generate-luks2-argon2-leftover-params.img.sh  generate-luks2-correct-full-json0.img.sh  (+85 more)
(+223 files in other folders)
